@startuml

title __ENTITIES's Class Diagram__\n

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class BoardEntity {
          - id : String
          - name : String
          - nodeEntities : Set<NodeEntity>
          + equals()
          + hashCode()
          + BoardEntity()
          {static} + builder()
          + BoardEntity()
          + getId()
          + getName()
          + getNodeEntities()
          + setId()
          + setName()
          + setNodeEntities()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class BoardEntityBuilder {
          - id : String
          - name : String
          - nodeEntities : Set<NodeEntity>
          ~ BoardEntityBuilder()
          + id()
          + name()
          + nodeEntities()
          + build()
          + toString()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class NodeEntity {
          - id : String
          - nodeId : String
          - spawnStreamId : String
          - horizontalPosition : Double
          - verticalPosition : Double
          - maxSpeedAllowed : Double
          - leftNodeId : String
          - rightNodeId : String
          - topNodeId : String
          - bottomNodeId : String
          + equals()
          + hashCode()
          + NodeEntity()
          {static} + builder()
          + NodeEntity()
          + getId()
          + getBoard()
          + getNodeId()
          + getSpawnStreamId()
          + getHorizontalPosition()
          + getVerticalPosition()
          + getNodeType()
          + getDirection()
          + getMaxSpeedAllowed()
          + getLeftNodeId()
          + getRightNodeId()
          + getTopNodeId()
          + getBottomNodeId()
          + setId()
          + setBoard()
          + setNodeId()
          + setSpawnStreamId()
          + setHorizontalPosition()
          + setVerticalPosition()
          + setNodeType()
          + setDirection()
          + setMaxSpeedAllowed()
          + setLeftNodeId()
          + setRightNodeId()
          + setTopNodeId()
          + setBottomNodeId()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class NodeEntityBuilder {
          - id : String
          - nodeId : String
          - spawnStreamId : String
          - horizontalPosition : Double
          - verticalPosition : Double
          - maxSpeedAllowed : Double
          - leftNodeId : String
          - rightNodeId : String
          - topNodeId : String
          - bottomNodeId : String
          ~ NodeEntityBuilder()
          + id()
          + board()
          + nodeId()
          + spawnStreamId()
          + horizontalPosition()
          + verticalPosition()
          + nodeType()
          + direction()
          + maxSpeedAllowed()
          + leftNodeId()
          + rightNodeId()
          + topNodeId()
          + bottomNodeId()
          + build()
          + toString()
      }
    }
  }
  

  BoardEntity +-down- BoardEntityBuilder
  NodeEntity o-- BoardEntity : board
  NodeEntity o-- NodeType : nodeType
  NodeEntity o-- NodeDirection : direction
  NodeEntity +-down- NodeEntityBuilder
  NodeEntityBuilder o-- BoardEntity : board
  NodeEntityBuilder o-- NodeType : nodeType
  NodeEntityBuilder o-- NodeDirection : direction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
